# p7-follow-person-CarlosDrag0n

p7/: CMakeLists.txt  package.xml
p7/include/Life_cycle_control/: Detection.hpp  Follow.hpp  PIDController.hpp
p7/launch/: follow.launch.py
p7/src/: Detection_main.cpp  seeker.cpp
p7/src/Life_cycle_control/: Detection.cpp  Follow.cpp  PIDController.cpp
